# VoidArchitect

./: .clang-format  .gitignore  .rustfmt.toml  .windsurfrules  CMakeLists.txt  CMakePresets.json  DOCS.md  Doxyfile  PLAN.md  PLANNING.md  PROMPT.md  README.md  ROADMAP.md  TASKS.md  TODO.md
apps/client/: CMakeLists.txt
apps/client/src/: Client.cpp  TestLayer.cpp  TestLayer.hpp
client/: CMakeLists.txt  Cargo.toml
client/src/: Client.cpp  TestLayer.cpp  TestLayer.hpp  main.rs
client/tests/: main.rs
engine/: CMakeLists.txt
engine/client/: CMakeLists.txt
engine/client/src/: ClientApplication.cpp  ClientApplication.hpp  client_pch.hpp
engine/client/src/Platform/: SDLSurfaceFactory.cpp  SDLSurfaceFactory.hpp  SDLWindow.cpp  SDLWindow.hpp
engine/client/src/Systems/: MaterialSystem.cpp  MaterialSystem.hpp  MeshSystem.cpp  MeshSystem.hpp  RHISystem.cpp  RHISystem.hpp  RenderPassSystem.cpp  RenderPassSystem.hpp  RenderStateSystem.cpp  RenderStateSystem.hpp  ResourceSystem.cpp  ShaderSystem.cpp  ShaderSystem.hpp  TextureSystem.cpp  TextureSystem.hpp
engine/common/: CMakeLists.txt
engine/common/src/: Application.cpp  Application.hpp  Entry.hpp  Handle.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Logger.cpp  Utils.hpp  Uuid.cpp  Uuid.hpp  VoidArchitect.hpp  Window.hpp  common_pch.hpp
engine/common/src/Collections/: Array.hpp  FixedStorage.hpp  HashMap.hpp  Tests.cpp
engine/common/src/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
engine/common/src/Math/: Math.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec4.cpp  Vec4.hpp
engine/common/src/Systems/: ConfigSystem.cpp  ConfigSystem.hpp
engine/rhi/: CMakeLists.txt
engine/rhi/src/: rhi_pch.hpp
engine/rhi/src/Interface/: IRenderingHardware.hpp  ISurfaceFactory.hpp
engine/rhi/src/Resources/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshData.cpp  MeshData.hpp  RenderPass.cpp  RenderPass.hpp  RenderState.cpp  RenderState.hpp  RenderTarget.cpp  RenderTarget.hpp  RendererTypes.cpp  RendererTypes.hpp  Shader.cpp  Shader.hpp  SubMesh.cpp  SurfaceHandle.cpp  SurfaceHandle.hpp  Texture.cpp  Texture.hpp
engine/rhi/src/Vulkan/: VulkanBindingGroupManager.cpp  VulkanBindingGroupManager.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanExecutionContext.cpp  VulkanExecutionContext.hpp  VulkanFence.cpp  VulkanFramebufferCache.cpp  VulkanFramebufferCache.hpp  VulkanImage.cpp  VulkanMaterial.cpp  VulkanMaterial.hpp  VulkanMesh.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderTarget.cpp  VulkanRenderTargetSystem.cpp  VulkanRenderTargetSystem.hpp  VulkanResourceFactory.cpp  VulkanResourceFactory.hpp  VulkanRhi.cpp  VulkanRhi.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapchain.cpp  VulkanTexture.cpp  VulkanTexture.hpp  VulkanUtils.cpp  VulkanUtils.hpp
engine/src/: VoidArchitect.hpp  va.pch.hpp
engine/src/Core/: Application.cpp  Application.hpp  Core.hpp  Entry.hpp  Handle.hpp  Layer.hpp  LayerStack.hpp  Logger.cpp  Logger.hpp  Transform.cpp  Transform.hpp  Uuid.cpp  Uuid.hpp  Window.hpp
engine/src/Core/Collections/: FixedStorage.hpp  HashMap.hpp  HashSet.hpp  Tests.hpp
engine/src/Core/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp
engine/src/Core/Math/: Constants.hpp  Mat4.cpp  Mat4.hpp  Math.cpp  Quat.cpp  Quat.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp
engine/src/Platform/: SDLWindow.cpp  SDLWindow.hpp
engine/src/Platform/RHI/: Buffer.cpp  Buffer.hpp  IRenderingHardware.hpp  Material.cpp  Material.hpp
engine/src/Platform/Threading/: IThread.hpp  Thread.cpp  ThreadingFactory.cpp
engine/src/Resources/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshData.cpp  MeshData.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  RenderState.cpp  RenderState.hpp  RenderTarget.cpp  RenderTarget.hpp  Shader.cpp  Shader.hpp  SubMesh.cpp  SubMesh.hpp  Texture.cpp  Texture.hpp
engine/src/Resources/Loaders/: ImageLoader.cpp  ImageLoader.hpp  Loader.cpp  Loader.hpp  MaterialLoader.cpp  MaterialLoader.hpp  MeshLoader.cpp  MeshLoader.hpp  (+9 more)
engine/src/Systems/: MaterialSystem.cpp  MaterialSystem.hpp  MeshSystem.cpp  MeshSystem.hpp  PipelineSystem.cpp  PipelineSystem.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderPassSystem.cpp  RenderPassSystem.hpp  RenderStateSystem.cpp  RenderStateSystem.hpp  Renderer.hpp  ResourceSystem.cpp  ResourceSystem.hpp  ShaderSystem.cpp  ShaderSystem.hpp  TextureSystem.cpp  TextureSystem.hpp
engine_client/: CMakeLists.txt  Cargo.toml  build.rs
engine_client/src/: VoidArchitect.hpp  lib.rs  network.rs  platform.rs  platform_sdl.rs  test_utils.rs  va.pch.hpp  vapch.hpp
engine_client/src/Core/: Application.cpp  Application.hpp  Core.hpp  Entry.hpp  Layer.cpp  LayerStack.cpp  Logger.cpp  Logger.hpp  Window.hpp
engine_client/src/Platform/: SDLWindow.cpp  SDLWindow.hpp
engine_client/src/Systems/: Renderer.cpp
engine_client/src/renderer/: mod.rs
engine_client/tests/: command_buffer_fixes.rs  engine_context_renderer.rs  error_handling.rs  mock_helpers.rs  platform.rs  platform_configs.rs  renderer.rs  sdl2_migration_tests.rs  sdl3_integration_tests.rs  vulkan_buffer.rs  vulkan_command_recording.rs  vulkan_commands.rs  vulkan_device.rs  vulkan_framebuffer.rs  vulkan_integration.rs  vulkan_pipeline.rs  vulkan_renderpass.rs
engine_client/tests/helpers/: errors.rs  mod.rs  window.rs
engine_server/: Cargo.toml
engine_server/src/: lib.rs  network.rs  session.rs
engine_server/src/actors/: handshake.rs  messages.rs  mod.rs  network_listener.rs  session.rs  session_manager.rs  universe.rs
engine_server/src/old/: handshake.rs  mod.rs  session.rs  session_manager.rs  universe.rs
engine_server/src/persistence/: backend.rs  json.rs  mod.rs
server/: Cargo.toml  build.rs
server/src/: lib.rs  main.rs
server/tests/: main.rs
tests/: CMakeLists.txt
tests/src/: TestApplication.cpp  TestLayer.cpp  TestLayer.hpp
tests/src/Collections/: FixedStorageTests.cpp
tests/src/Core/: TestRunner.cpp  TestRunner.hpp
(+5559 files in other folders)
