[package]
name = "void-architect_client"
version = "0.1.0"
edition = "2024"

[dependencies]
void-architect_shared = { path="../shared" }
void-architect_engine_client = { path="../engine_client" }
prost = "0.13.5"
tokio = { version = "1.44.2", features = ["full"] }
bytes = "1.10.1"
log = "0.4.27"
env_logger = "0.11.8"
uuid = { version = "1.16.0", features = ["v4"] }
