[package]
name = "void-architect_engine_client"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38.0", features = ["linked", "debug", "std" ] }
ash-window = "0.13.0"
glam = "0.30.2"
log = "0.4.27"
raw-window-handle = "0.6.2"
sdl3 = { version = "0.14.25", features = ["raw-window-handle", "test-mode"] }
[build-dependencies]
shaderc = "0.8"

[dev-dependencies]
mockall = "0.12.1"
