[package]
name = "void-architect_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "void_architect_server"
path = "src/lib.rs"

[dependencies]
void-architect_shared = { path = "../shared" }
prost = "0.13"
prost-types = "0.13"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
env_logger = "0.11.8"

[dev-dependencies]
serial_test = "3.2.0"
