[package]
name = "void-architect_server"
version = "0.1.0"
edition = "2024"

[dependencies]
void-architect_shared = { path = "../shared" }
void-architect_engine_server = { path = "../engine_server" }
prost = "0.13"
prost-types = "0.13"
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]
serial_test = "3.2.0"
